Fixes following V0.11.6 merge